fixed intro-p font size on mobile

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -144,4 +144,7 @@ a {
   .project-img{
     width: 200px;
   }
+  #intro-p{
+    font-size: 14px;
+  }
 }
